<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:bind="http://schemas.android.com/apk/res-auto"
       >
    <data>
        <variable
                name="horse"
                type="com.azio.androidassignment.model.Horse"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>
    <TextView
            android:text="@string/tv_label_horseName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:fontFamily="@font/lato_light"
            android:textColor="@color/colorGray"
            android:textSize="14dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline3"/>
    <TextView
            android:text="@string/tv_label_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/lato_light"
            android:textColor="@color/colorGray"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHorseName" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/tv_label_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/lato_light"
            android:textColor="@color/colorGray"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHorseAge" android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/tv_label_sex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:fontFamily="@font/lato_light"
            android:textColor="@color/colorGray"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHorseCountry"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/tv_label_horseColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:fontFamily="@font/lato_light"
            android:textColor="@color/colorGray"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/tv_label_Trainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:fontFamily="@font/lato_light"
            android:textColor="@color/colorGray"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHorseColor"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginEnd="8dp" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/tv_label_currentOwner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:fontFamily="@font/lato_light"
            android:textColor="@color/colorGray"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHorseTrainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline3"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.4"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvHorseName" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/lato_light"
            android:textColor="@color/colorLightBlack"
            android:textSize="14dp"
            android:text='@{horse.hHorse ?? ""}'
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/textView2"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvHorseAge"
            android:fontFamily="@font/lato_light"
            android:textColor="@color/colorLightBlack"
            android:textSize="14dp"
            android:text='@{horse.hAge ?? ""}'
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvHorseCountry"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/lato_light"
            android:textColor="@color/colorLightBlack"
            android:textSize="14dp"
            android:text='@{horse.country ?? ""}'
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/textView4"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvHorseSex"
            android:fontFamily="@font/lato_light"
            android:textColor="@color/colorLightBlack"
            android:textSize="14dp"
            android:text='@{horse.hSex ?? ""}'
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvHorseColor"
            android:fontFamily="@font/lato_light"
            android:textColor="@color/colorLightBlack"
            android:textSize="14dp"
            android:text='@{horse.hColour ?? ""}'
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvHorseTrainer"
            android:fontFamily="@font/lato_light"
            android:textColor="@color/colorLightBlack"
            android:textSize="14dp"
            android:text='@{horse.hTrainer ?? ""}'
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvCurrentOwner"
            android:fontFamily="@font/lato_light"
            android:textColor="@color/colorLightBlack"
            android:textSize="14dp"
            android:text='@{horse.hCurrentOwner ?? ""}'
            app:layout_constraintTop_toTopOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/btn_label_moreInfo"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/button"
            android:textAllCaps="false"
            android:textSize="12dp"
            android:fontFamily="@font/lato_light"
            android:textColor="@color/colorLightBlue"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentOwner"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>