<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
         tools:context=".ui.horse.HorseDetailActivity">
    <data>
        <variable
                name="horse"
                type="com.azio.androidassignment.model.Horse"/>
    </data>

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
                android:fillViewport="true"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gradient_blue_green"

        >
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/guideline" android:id="@+id/constraintLayout">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp" app:srcCompat="@drawable/horse_profile_default"
                        android:id="@+id/imgHorseImage"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="24dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/tvHorseNameProfile"
                        app:layout_constraintDimensionRatio="h,1:1"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvHorseNameProfile" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:gravity="center"
                        android:textSize="18dp"
                        android:textColor="@color/colorWhite"
                        android:fontFamily="@font/lato_regular"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="16dp" tools:text="Lady Val"/>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/btn_back"
                        android:id="@+id/imageButton"
                        android:background="@android:color/transparent"
                        android:padding="16dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:orientation="horizontal"
                                                        app:layout_constraintGuide_percent="0.3"
                                                        android:id="@+id/guideline"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout" android:layout_marginEnd="2dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="2dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/bg_white_rounded"
            >

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/horse_logo"
                        android:id="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
                <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="8dp"
                        android:elevation="8dp"
                        android:visibility="visible"
                        app:cardCornerRadius="12dp"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginTop="16dp"
                        android:id="@+id/cardView">
                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" tools:visibility="visible">
                        <include layout="@layout/horse_detail_profile" android:id="@+id/horseProfile"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
                <TextView
                        android:text="@string/tv_label_horseProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView7"
                        app:layout_constraintTop_toTopOf="@+id/imageView2"
                        android:fontFamily="@font/lato_hairline"
                        android:textColor="@color/colorDarkGray"
                        android:textSize="15dp"
                        app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"/>
                <View android:layout_width="0dp" android:layout_height="2dp"
                      app:layout_constraintEnd_toEndOf="@+id/textView7"
                      app:layout_constraintStart_toStartOf="@+id/textView7"
                      app:layout_constraintTop_toBottomOf="@+id/textView7"
                      android:background="@color/colorBrightYellow" android:layout_marginTop="8dp"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/horse_logo"
                        android:id="@+id/imageView3" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/cardView"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
                <TextView
                        android:text="@string/tv_label_winAndPlaces"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView18"
                        app:layout_constraintTop_toTopOf="@+id/imageView3"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                        app:layout_constraintStart_toEndOf="@+id/imageView3" android:layout_marginStart="8dp"/>
                <View android:layout_width="0dp" android:layout_height="2dp"
                      android:id="@+id/view2"
                      app:layout_constraintEnd_toEndOf="@+id/textView18"
                      app:layout_constraintStart_toStartOf="@+id/textView18"
                      app:layout_constraintTop_toBottomOf="@+id/textView18"
                      android:background="@color/colorBrightYellow" android:layout_marginTop="8dp"/>
                <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3"
                        android:layout_marginTop="16dp"
                        android:elevation="8dp"
                        app:cardCornerRadius="12dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="16dp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <TextView
                                android:text="@string/tv_label_starts"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView19"
                                android:fontFamily="@font/lato_light"
                                android:textColor="@color/colorGray"
                                android:textSize="14dp"
                                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                                android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="parent"
                                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="16dp"/>
                        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                                    android:layout_height="wrap_content"
                                                                    android:id="@+id/guideline4"
                                                                    android:orientation="vertical"
                                                                    app:layout_constraintGuide_percent="0.4"/>
                        <TextView
                                android:text="@string/tv_label_firsts"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView20"
                                android:fontFamily="@font/lato_light"
                                android:textColor="@color/colorGray"
                                android:textSize="14dp"
                                android:layout_marginStart="16dp"
                                app:layout_constraintTop_toBottomOf="@+id/tvStarts"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/guideline4" android:layout_marginEnd="8dp"
                                android:layout_marginTop="16dp"/>
                        <TextView
                                android:text="@string/tv_label_secondPlaces"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView21"
                                android:fontFamily="@font/lato_light"
                                android:textColor="@color/colorGray"
                                android:textSize="14dp"
                                app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/guideline4"
                                android:layout_marginEnd="8dp"
                                app:layout_constraintTop_toBottomOf="@+id/tvFirstPlaces"
                                android:layout_marginTop="16dp"/>
                        <TextView
                                android:text="@string/tv_label_thirdPlaces"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView22"
                                android:fontFamily="@font/lato_light"
                                android:textColor="@color/colorGray"
                                android:textSize="14dp"
                                app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/guideline4"
                                android:layout_marginEnd="8dp"
                                app:layout_constraintTop_toBottomOf="@+id/tvSecondPlaces"
                                android:layout_marginTop="16dp"/>
                        <TextView
                                android:text="@string/tv_label_noPlaces"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView23"
                                android:fontFamily="@font/lato_light"
                                android:textColor="@color/colorGray"
                                android:textSize="14dp"
                                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/guideline4" android:layout_marginEnd="8dp"
                                app:layout_constraintTop_toBottomOf="@+id/textView22" android:layout_marginTop="16dp"/>
                        <TextView
                                android:text="@string/tv_label_winRate"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView24"
                                android:fontFamily="@font/lato_light"
                                android:textColor="@color/colorGray"
                                android:textSize="14dp"
                                app:layout_constraintTop_toBottomOf="@+id/textView23" android:layout_marginTop="16dp"
                                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline4"/>
                        <TextView
                                android:text="@string/tv_label_placeRate"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView25"
                                android:fontFamily="@font/lato_light"
                                android:textColor="@color/colorGray"
                                android:textSize="14dp"
                                app:layout_constraintTop_toBottomOf="@+id/textView24" android:layout_marginTop="16dp"
                                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                                app:layout_constraintEnd_toStartOf="@+id/guideline4" android:layout_marginEnd="8dp"/>
                        <TextView
                                android:text="@string/tv_label_priceWon"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView26"
                                app:layout_constraintEnd_toStartOf="@+id/guideline4" android:layout_marginEnd="8dp"
                                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView25"
                                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
                        <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/tvStarts"
                                app:layout_constraintTop_toTopOf="@+id/textView19"
                                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                                app:layout_constraintStart_toStartOf="@+id/guideline4"
                                android:layout_marginStart="8dp"/>
                        <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/tvFirstPlaces"
                                app:layout_constraintTop_toTopOf="@+id/textView20"
                                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                                app:layout_constraintStart_toStartOf="@+id/guideline4"
                                android:layout_marginStart="8dp"/>
                        <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/tvSecondPlaces"
                                app:layout_constraintTop_toTopOf="@+id/textView21"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginStart="8dp"
                                app:layout_constraintStart_toStartOf="@+id/guideline4" android:layout_marginEnd="8dp"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>